<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.james.wodrecordapp.ui.record.RecordWODActivity">

    <TextView
        android:id="@+id/txt_wod_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/lbl_date"
        android:textSize="@dimen/txt_label_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_wod_sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:textSize="@dimen/txt_label_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_wod_date" />

    <Spinner
        android:id="@+id/spinner_wod_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:textSize="@dimen/txt_label_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_wod_sets" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_weight_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_wod_exercise">

        <EditText
            android:id="@+id/txt_weight"
            style="@style/StandardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginTop="8dp"
            android:hint="@string/lbl_weight"
            android:inputType="numberDecimal"
            android:textSize="@dimen/txt_label_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_wod_details_layout"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_weight_layout">

        <EditText
            android:id="@+id/txt_wod_details"
            style="@style/StandardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginTop="8dp"
            android:hint="WOD"
            android:inputType="text"
            android:textSize="@dimen/txt_label_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_wod_time_layout"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_wod_details_layout">

        <EditText
            android:id="@+id/txt_wod_time"
            style="@style/StandardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txt_wod_details"
            android:layout_margin="@dimen/normal_margin"
            android:hint="@string/lbl_wod_time"
            android:inputType="time"
            android:textSize="@dimen/txt_label_size" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_wod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_add_wod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_wod_time_layout" />

</android.support.constraint.ConstraintLayout>